--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 #
 
 # Name of your site (displayed in the header)
-name: Your Name
+name: Siya Dictionary
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: The truth, specially curated for Neel.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://files.gamebanana.com/img/ico/sprays/spray_trollface_copy.png
 
 #
 # Flags below are optional
