--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ footer-links:
   dribbble:
   email:
   facebook:
-  flickr:barryclark/jekyll-now
+  flickr:
   instagram:
   linkedin:
   pinterest:
