--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: Siya Dictionary
+name: Sai Dictionary
 
 # Short bio or description (displayed in the header)
 description: The truth, specially curated for Neel.
